--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="item"> <a href="Energy League/index.html"><img src="imagenes/el.png"></a></div>
         <div class="item" ><a href="oceano/pagina principal/MENU.HTML"><img src="imagenes/OL.png"></a></div>
         <div class="item"> <a href="landleague/index.html"><img src="imagenes/LL.png"></a></div>
-        <div class="item"> <a href="WLWEB1/Index.html"><img src="imagenes/WL.png"></a></div>
+        <div class="item"> <a href="WLWEB1/index.html"><img src="imagenes/WL.png"></a></div>
     
     </div>
 </body>
